leafbuild-syntax/src/snapshots/leafbuild_syntax__tests__parse_output__foreach_basic.snap
---
source: leafbuild-syntax/src/tests.rs
expression: "foreach () in () {}"

---
- ROOT 0..19
  - Foreach 0..19
    - "foreach" FOREACH_KW 0..7
    - " " WHITESPACE 7..8
    - Expr 8..10
      - PrimaryExpr 8..10
        - TupleExpr 8..10
          - "(" L_PAREN 8..9
          - ")" R_PAREN 9..10
    - " " WHITESPACE 10..11
    - "in" IN_KW 11..13
    - " " WHITESPACE 13..14
    - Expr 14..16
      - PrimaryExpr 14..16
        - TupleExpr 14..16
          - "(" L_PAREN 14..15
          - ")" R_PAREN 15..16
    - " " WHITESPACE 16..17
    - ExprBlock 17..19
      - "{" L_BRACE 17..18
      - "}" R_BRACE 18..19

