leafbuild-syntax/src/snapshots/leafbuild_syntax__tests__parse_output__freestanding_expr.snap
---
source: leafbuild-syntax/src/tests.rs
expression: "1\n"

---
- ROOT 0..2
  - Expr 0..1
    - PrimaryExpr 0..1
      - "1" NUMBER 0..1
  - "\n" NEWLINE 1..2

