leafbuild-syntax/src/snapshots/leafbuild_syntax__tests__parse_output__if_condition.snap
---
source: leafbuild-syntax/src/tests.rs
expression: "if (()) {} else {}"

---
- ROOT 0..18
  - Conditional 0..18
    - ConditionalBranch 0..10
      - "if" IF_KW 0..2
      - " " WHITESPACE 2..3
      - Expr 3..7
        - PrimaryExpr 3..7
          - TupleExpr 3..7
            - "(" L_PAREN 3..4
            - Expr 4..6
              - PrimaryExpr 4..6
                - TupleExpr 4..6
                  - "(" L_PAREN 4..5
                  - ")" R_PAREN 5..6
            - ")" R_PAREN 6..7
      - ExprBlock 7..10
        - " " WHITESPACE 7..8
        - "{" L_BRACE 8..9
        - "}" R_BRACE 9..10
    - " " WHITESPACE 10..11
    - "else" ELSE_KW 11..15
    - " " WHITESPACE 15..16
    - ExprBlock 16..18
      - "{" L_BRACE 16..17
      - "}" R_BRACE 17..18

