leafbuild-syntax/src/snapshots/leafbuild_syntax__tests__parse_output__if_else_if_else_condition_stretched.snap
---
source: leafbuild-syntax/src/tests.rs
expression: "\n        if ()\n    \n        {\n    \n    \n    \n        }\n    \n        else if () {\n    \n    \n        }\n    \n        else {\n    \n    \n        }\n    "

---
- ROOT 0..145
  - "\n" NEWLINE 0..1
  - "        " WHITESPACE 1..9
  - Conditional 9..140
    - ConditionalBranch 9..54
      - "if" IF_KW 9..11
      - " " WHITESPACE 11..12
      - Expr 12..14
        - PrimaryExpr 12..14
          - TupleExpr 12..14
            - "(" L_PAREN 12..13
            - ")" R_PAREN 13..14
      - "\n" NEWLINE 14..15
      - "    " WHITESPACE 15..19
      - "\n" NEWLINE 19..20
      - "        " WHITESPACE 20..28
      - ExprBlock 28..54
        - "{" L_BRACE 28..29
        - "\n" NEWLINE 29..30
        - "    " WHITESPACE 30..34
        - "\n" NEWLINE 34..35
        - "    " WHITESPACE 35..39
        - "\n" NEWLINE 39..40
        - "    " WHITESPACE 40..44
        - "\n" NEWLINE 44..45
        - "        " WHITESPACE 45..53
        - "}" R_BRACE 53..54
    - "\n" NEWLINE 54..55
    - "    " WHITESPACE 55..59
    - "\n" NEWLINE 59..60
    - "        " WHITESPACE 60..68
    - "else" ELSE_KW 68..72
    - " " WHITESPACE 72..73
    - ConditionalBranch 73..100
      - "if" IF_KW 73..75
      - " " WHITESPACE 75..76
      - Expr 76..78
        - PrimaryExpr 76..78
          - TupleExpr 76..78
            - "(" L_PAREN 76..77
            - ")" R_PAREN 77..78
      - " " WHITESPACE 78..79
      - ExprBlock 79..100
        - "{" L_BRACE 79..80
        - "\n" NEWLINE 80..81
        - "    " WHITESPACE 81..85
        - "\n" NEWLINE 85..86
        - "    " WHITESPACE 86..90
        - "\n" NEWLINE 90..91
        - "        " WHITESPACE 91..99
        - "}" R_BRACE 99..100
    - "\n" NEWLINE 100..101
    - "    " WHITESPACE 101..105
    - "\n" NEWLINE 105..106
    - "        " WHITESPACE 106..114
    - "else" ELSE_KW 114..118
    - " " WHITESPACE 118..119
    - ExprBlock 119..140
      - "{" L_BRACE 119..120
      - "\n" NEWLINE 120..121
      - "    " WHITESPACE 121..125
      - "\n" NEWLINE 125..126
      - "    " WHITESPACE 126..130
      - "\n" NEWLINE 130..131
      - "        " WHITESPACE 131..139
      - "}" R_BRACE 139..140
  - "\n" NEWLINE 140..141
  - "    " WHITESPACE 141..145

